Finished notes for 1/18

--- a/admin/meetings/011821-meeting1.md
+++ b/admin/meetings/011821-meeting1.md
@@ -17,12 +17,17 @@ Agenda
 
 For Future Investigation:
 
+-Team Name
+
+-Finishing when2meet for 2nd meeting
 
 
 Decisions Made:
 
+-See Team Contract for details about team logistics. 
+
 -Move to Discord. All communications done with Discord and Email. Discord primary communication, email secondary, and phone emergency.
 
--
+-Find a better time for weekly meetings than Monday. Tentatively based on https://www.when2meet.com/?10749343-EYu54
 
 
