--- a/admin/meetings/011821-meeting1.md
+++ b/admin/meetings/011821-meeting1.md
@@ -6,7 +6,7 @@ Location: Zoom (https://ucsd.zoom.us/meeting/tJIkcOysqTgqHt2UOaL4uMxX6UFOb-G514O
 
 Attendance:
 
-(Everyone was here)
+-No Yuying or Bryan
 
 Agenda
 
