updating 1/20 notes with decisions made

--- a/admin/meetings/Jan17-Jan23/012021-meeting2.md
+++ b/admin/meetings/Jan17-Jan23/012021-meeting2.md
@@ -40,6 +40,11 @@ Agenda:
     - Decided on Spongebob as tentative theme
   - Anime?
 
+Decisions Made:
+  
+  - Team contract terms agreed and completed
+  
+  - As mentioned above, second meeting weekly time determined to be Wednesday 2-3 PM. 
   
 To Do: 
 
