added 2/17 meeting, Sprint 1 Review notes, and Sprint 1 Retrospective

--- a/admin/meetings/Feb14-Feb20/021421-meeting10.md
+++ b/admin/meetings/Feb14-Feb20/021421-meeting10.md
@@ -34,11 +34,14 @@ Agenda:
    * Timer was highest priority, but work was distributed evenly across functions that were not high priority
      * Split high priority tasks into smaller tasks, then distribute roles to other tasks  
      * Possibly have due dates/time estimates for tasks
-3. Goal for Tuesday 02/16/2021
-   * Have a page and functional timer up 
+3. Decisions made
+   * Have a page and functional timer up for Tuesday 02/16/2021
+   * Bryan, Colby, Evan will assist creating a the desired timer.
+   * Group members will think about goals for next sprint and be ready to discuss in the next meeting on Wednesday 02/17/2021.
 
 To Do:
 - Post progress updates more frequently through Agile Stories channel in Discord
 - Link JS to HTML once Colby pushes to git
+- Prepare for discussion about next sprint.
 
 End Time: 6:25PM
